# binary_prediction_rainfall_dataset

./: README.md  main.py  pyproject.toml
notebooks/evaluation/: base_evaluation.py  explore_models.py
notebooks/exploratory/: 01_go_through.ipynb  02_distribution.ipynb  03_feat_eng.ipynb  04_feature_engg.ipynb  05_data_balance.ipynb
notebooks/modeling/: submit.py  train.py
